--- a/package.json
+++ b/package.json
@@ -76,7 +76,6 @@
     "url-regex": "^5.0.0",
     "xmldom": "^0.6.0",
     "xfarr-api": "^1.0.3",
-    "yargs": "^17.0.1",
-    "yt-search": "^2.9.0"
+    "yargs": "^17.0.1"
   }
 }
