--- a/package.json
+++ b/package.json
@@ -79,7 +79,6 @@
     "wa-sticker-formatter": "^4.2.0",
     "xfarr-api": "^1.0.3",
     "xmldom": "^0.6.0",
-    "yargs": "^17.0.1",
-    "yt-search": "^2.10.3"
+    "yargs": "^17.0.1"
   }
 }
